--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "docker-nginx-google"]
 	path = docker-nginx-google
 	url = https://github.com/einverne/docker-nginx-google.git
+[submodule "netdata"]
+	path = netdata
+	url = https://github.com/firehol/netdata.git
