--- a/v2ray/Dockerfile
+++ b/v2ray/Dockerfile
@@ -14,11 +14,13 @@ RUN apk upgrade --update \
     && echo "Asia/Shanghai" > /etc/timezone \
     && mkdir -p \ 
         /var/log/v2ray \
+        /usr/bin/v2ray \
         /tmp/v2ray \
         /etc/v2ray/ \
     && curl -L -H "Cache-Control: no-cache" -o /tmp/v2ray/v2ray.zip \
         https://github.com/v2ray/v2ray-core/releases/download/${V2RAY_VERSION}/v2ray-linux-64.zip \
-    && unzip /tmp/v2ray/v2ray.zip -d /usr/bin/v2ray/ \
+    && unzip /tmp/v2ray/v2ray.zip -d /tmp/v2ray/ \
+    && mv /tmp/v2ray/v2ray-${V2RAY_VERSION}-linux-64/* /usr/bin/v2ray/ \
     && chmod +x /usr/bin/v2ray/v2ray && chmod +x /usr/bin/v2ray/v2ctl \
     && apk del curl \
     && rm -rf /tmp/v2ray /var/cache/apk/*
