Add config to linx
Signed-off-by: wujiawei <wujiawei@xiaomi.com>

--- a/linx-server/Dockerfile
+++ b/linx-server/Dockerfile
@@ -5,9 +5,11 @@ RUN set -ex \
         && go get github.com/andreimarcu/linx-server \
         && apk del .build-deps
 
+ADD config.ini /etc/linx/config.ini
+
 VOLUME ["/data/files", "/data/meta"]
 
 EXPOSE 8080
 #USER nobody
-ENTRYPOINT ["/go/bin/linx-server", "-bind=0.0.0.0:8080", "-filespath=/data/files/", "-metapath=/data/meta/"]
+ENTRYPOINT ["/go/bin/linx-server", "-config=/etc/linx/config.ini", "-bind=0.0.0.0:8080", "-filespath=/data/files/", "-metapath=/data/meta/"]
 CMD ["-sitename=linx", "-allowhotlink"]
