--- a/linx-server/config.ini
+++ b/linx-server/config.ini
@@ -1,2 +1,8 @@
 sitename = evLinx
-maxsize = 1073741824
+maxsize = 10485760
+# allowhotlink = false
+# siteurl = "http://linx.einverne.info"
+# filespath = ""
+# metapath = ""
+# maxexpiry = 86400
+# authfile = "/path/to/authfile"
