--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "qiandao"]
 	path = qiandao
 	url = https://github.com/einverne/qiandao.git
+[submodule "weibo-rss"]
+	path = weibo-rss
+	url = git@github.com:einverne/weibo-rss.git
