--- a/nginx-proxy/Dockerfile
+++ b/nginx-proxy/Dockerfile
@@ -1,3 +1,3 @@
 FROM jwilder/nginx-proxy:alpine
-RUN echo 'client_max_body_size 0;' > /etc/nginx/conf.d/unrestricted_client_body_size.conf
-
+RUN echo 'client_max_body_size 0;' > /etc/nginx/conf.d/custom.conf \
+    && echo 'server_tokens off;' >> /etc/nginx/conf.d/custom.conf
