--- a/nginx-proxy/docker-compose.yml
+++ b/nginx-proxy/docker-compose.yml
@@ -7,18 +7,32 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    labels:
+      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
     volumes:
-      - "/etc/certs:/etc/nginx/certs:ro"
+      - "conf:/etc/nginx/conf.d"
+      - "vhost:/etc/nginx/vhost.d"
+      - "html:/usr/share/nginx/html"
+      - "certs:/etc/nginx/certs"
       - "/var/run/docker.sock:/tmp/docker.sock:ro"
 
   letsencrypt-nginx-proxy-companion:
     image: jrcs/letsencrypt-nginx-proxy-companion
     container_name: letsencrypt-nginx-proxy-companion
     volumes:
-      - "/etc/certs:/etc/nginx/certs:rw"
+      - "conf:/etc/nginx/conf.d"
+      - "vhost:/etc/nginx/vhost.d"
+      - "html:/usr/share/nginx/html"
+      - "certs:/etc/nginx/certs"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-    volumes_from:
-      - "nginx-proxy"
+    environment:
+      NGINX_PROXY_CONTAINER: nginx-proxy
+
+volumes:
+  conf:
+  vhost:
+  html:
+  certs:
 
 networks:
   default:
