--- a/chevereto/docker-compose.yml
+++ b/chevereto/docker-compose.yml
@@ -2,24 +2,24 @@ version: '3'
 
 services:
   db:
-    image: mysql
+    image: mysql:5.7
     container_name: chevereto_db
     volumes:
-      - '/var/lib/mysql_chevereto'
+      - db_data:/var/lib/mysql
     restart: always
+    ports:
+      - "33061:3306"
     environment:
       MYSQL_ROOT_PASSWORD: chevereto_root
       MYSQL_DATABASE: chevereto
       MYSQL_USER: chevereto
       MYSQL_PASSWORD: chevereto
-    networks:
-      - chevereto-network
 
   chevereto:
     depends_on:
       - db
-    #image: nmtan/chevereto:latest
-    build: ./
+    image: einverne/chevereto:latest
+    # build: ./
     container_name: chevereto
     restart: always
     environment:
@@ -28,12 +28,18 @@ services:
       CHEVERETO_DB_PASSWORD: chevereto
       CHEVERETO_DB_NAME: chevereto
       CHEVERETO_DB_PREFIX: chv_
+      VIRTUAL_HOST: photo.einverne.info
+      VIRTUAL_PORT: 80
+      LETSENCRYPT_HOST: photo.einverne.info
+      LETSENCRYPT_EMAIL: admin@einverne.info
     volumes:
-      - '/var/www/html/chevereto/images:/var/www/html/images:rw'
-    ports:
-      - 8081:80
-    networks:
-      - chevereto-network
+      - chevereto:/var/www/html/images
+
+volumes:
+  db_data:
+  chevereto:
+
 networks:
-  chevereto-network:
-    driver: bridge
+  default:
+    external:
+      name: nginx-proxy
