--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,4 @@
 	url = https://github.com/einverne/weibo-rss.git
 [submodule "docker-yourls"]
 	path = docker-yourls
-	url = git@github.com:einverne/docker-yourls.git
+	url = https://github.com/einverne/docker-yourls.git
