Update docker hub image
Signed-off-by: Ein Verne <einverne@gmail.com>

--- a/rss-bridge/docker-compose.yml
+++ b/rss-bridge/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   rss-bridge:
-    image: rss-bridge
+    image: einverne/rss-bridge
     container_name: rss-bridge
     restart: unless-stopped
     volumes:
