--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "docker-yourls"]
 	path = docker-yourls
 	url = https://github.com/einverne/docker-yourls.git
+[submodule "docker-tt-rss"]
+	path = docker-tt-rss
+	url = https://github.com/einverne/docker-tt-rss.git
