--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     restart: always
     volumes:
       - db_data:/var/lib/mysql
+    ports:
+      - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: rootpass
       MYSQL_DATABASE: nextcloud
