--- a/v2ray/config.json
+++ b/v2ray/config.json
@@ -1,7 +1,7 @@
 {
   "log" : {
-    "access": "/var/log/v2ray/access.log",
-    "error": "/var/log/v2ray/error.log",
+    "access": "access.log",
+    "error": "error.log",
     "loglevel": "warning"
   },
   "inbound": {
