--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: mysql:5.7
     container_name: wordpress_db
     restart: always
+    ports:
+      - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql_wordpress
     environment:
@@ -11,8 +13,6 @@ services:
       MYSQL_DATABASE: wordpress
       MYSQL_USER: wordpress_user
       MYSQL_PASSWORD: wordpress_pass
-    networks:
-      - wordpress-network
 
   wordpress:
     image: wordpress:latest
@@ -20,8 +20,6 @@ services:
     restart: always
     depends_on:
       - db
-    expose:
-      - 80
     volumes:
       - /var/www/html/wp-content:/var/www/html/wp-content 
     environment:
@@ -29,10 +27,12 @@ services:
       WORDPRESS_DB_USER: wordpress_user
       WORDPRESS_DB_PASSWORD: wordpress_pass
       VIRTUAL_HOST: www.einverne.info
-    networks:
-      - wordpress-network
+      VIRTUAL_PORT: 80
+      LETSENCRYPT_HOST: www.einverne.info
+      LETSENCRYPT_EMAIL: admin@einverne.info
 volumes:
     db_data:
 networks:
-  wordpress-network:
-      driver: bridge
+  default:
+    external:
+      name: nginx-proxy
