Update rss bridge
Signed-off-by: Ein Verne <einverne@gmail.com>

--- a/rss-bridge/Dockerfile
+++ b/rss-bridge/Dockerfile
@@ -4,4 +4,7 @@ RUN curl -L -o tmp.tgz https://github.com/RSS-Bridge/rss-bridge/tarball/master/ 
         && tar -zxvf tmp.tgz --strip=1 \
         && rm tmp.tgz \
         && echo "Instagram" > whitelist.txt \
+        && echo "Facebook" >> whitelist.txt \
+        && echo "Twitter" >> whitelist.txt \
+        && echo "YouTube" >> whitelist.txt \
         && chown -R www-data:www-data *
