--- a/frp/frps/frps.ini
+++ b/frp/frps/frps.ini
@@ -24,9 +24,9 @@ log_max_days = 3
 # 是否开启特权模式(特权模式下，客户端更改配置无需更新服务端)
 # privilege_mode = true
 # 授权 token 建议随机生成
-# privilege_token = HE7qTtW8Lg83UDKY
+token = HE7
 # 特权模式下允许分配的端口(避免端口滥用)
-privilege_allow_ports = 6000-6005,10022,10080,20080
+privilege_allow_ports = 6000-6010,10022,10080,20080
 
 # 心跳检测超时
 # heartbeat_timeout = 30
@@ -39,4 +39,7 @@ authentication_timeout = 900
 
 # 子域名(特权模式需下将 *.domain.com 解析到公网服务器)
 # subdomain_host = domain.com
+
+# if tcp stream multiplexing is used, default is true
+tcp_mux = true
 
