--- a/nginx-proxy/docker-compose.yml
+++ b/nginx-proxy/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   nginx-proxy:
-    image: einverne/nginx-proxy
+    image: jwilder/nginx-proxy
     container_name: nginx-proxy
     restart: always
     ports:
