--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -9,10 +9,10 @@ services:
     volumes:
       - db_data:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: rootpass
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
+      MYSQL_ROOT_PASSWORD: ${YOUR_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE_NAME}
+      MYSQL_USER: ${MYSQL_DATABASE_USER}
+      MYSQL_PASSWORD: ${MYSQL_DATABASE_PASSWORD}
 
   wordpress:
     image: wordpress:latest
@@ -21,15 +21,16 @@ services:
     depends_on:
       - db
     volumes:
-      - /var/www/html/wp-content:/var/www/html/wp-content
+      - ${WP_CONTENT_PATH}:/var/www/html/wp-content
+      - ./upload.ini:/usr/local/etc/php/conf.d/uploads.ini
     environment:
       WORDPRESS_DB_HOST: db:3306
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress
-      VIRTUAL_HOST: www.einverne.info
+      WORDPRESS_DB_USER: ${MYSQL_DATABASE_USER}
+      WORDPRESS_DB_PASSWORD: ${MYSQL_DATABASE_PASSWORD}
+      VIRTUAL_HOST: ${YOUR_DOMAIN}
       VIRTUAL_PORT: 80
-      LETSENCRYPT_HOST: www.einverne.info
-      LETSENCRYPT_EMAIL: admin@einverne.info
+      LETSENCRYPT_HOST: ${YOUR_DOMAIN}
+      LETSENCRYPT_EMAIL: ${YOUR_EMAIL}
 volumes:
     db_data:
 networks:
