--- a/nginx-proxy/docker-compose.yml
+++ b/nginx-proxy/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     labels:
       - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
     volumes:
+      - "./client_max_body_size.conf:/etc/nginx/conf.d/client_max_body_size.conf:ro"
       - "conf:/etc/nginx/conf.d"
       - "vhost:/etc/nginx/vhost.d"
       - "html:/usr/share/nginx/html"
