--- a/n8n/.env
+++ b/n8n/.env
@@ -2,5 +2,6 @@ N8N_BASIC_AUTH_USER=username
 N8N_BASIC_AUTH_PASSWORD=password
 POSTGRESDB_USER=db_user
 POSTGRESDB_PASSWORD=db_password
+WEBHOOK_TUNNEL_URL=https://www.example.com/
 YOUR_DOMAIN=www.example.com
 YOUR_EMAIL=admin@example.com
