--- a/n8n/docker-compose.yml
+++ b/n8n/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - DB_POSTGRESDB_USER=${POSTGRESDB_USER}
       - DB_POSTGRESDB_SCHEMA=public
       - DB_POSTGRESDB_PASSWORD=${POSTGRESDB_PASSWORD}
+      - WEBHOOK_TUNNEL_URL=${WEBHOOK_TUNNEL_URL}
       - VIRTUAL_HOST=${YOUR_DOMAIN}
       - VIRTUAL_PORT=5678
       - LETSENCRYPT_HOST=${YOUR_DOMAIN}
