Update filebrowser to support db

--- a/filebrowser/.env
+++ b/filebrowser/.env
@@ -1,4 +1,4 @@
 HOME_PATH=~/
-FB_CONFIG_PATH=~/filebrowser_config
+FB_CONFIG_PATH=/home/einverne/docker-config/filebrowser
 YOUR_DOMAIN=files.einverne.info
 YOUR_EMAIL=admin@einverne.info
