Update syncthing: use official image

--- a/syncthing/.env
+++ b/syncthing/.env
@@ -1,3 +1,4 @@
-HOSTNAME=hosthatch1
-YOUR_DOMAIN=hh1s.einverne.info
+HOSTNAME=rica
+PATH_TO_SYNC=~/Syncthing
+YOUR_DOMAIN=sync.einverne.info
 YOUR_EMAIL=admin@einverne.info
