--- a/syncthing/docker-compose.yml
+++ b/syncthing/docker-compose.yml
@@ -2,11 +2,10 @@ version: "3"
 services:
   syncthing:
     container_name: syncthing
-    image: ghcr.io/linuxserver/syncthing
+    image: syncthing/syncthing
     hostname: ${HOSTNAME}
     volumes:
-      - ~/Syncthing/config:/config
-      - ~/SyncthingData:/SyncthingData
+      - ${PATH_TO_SYNC}:/var/syncthing
     ports:
       - 22000:22000/tcp
       - 22000:22000/udp
