Update netdata config

--- a/netdata/.env
+++ b/netdata/.env
@@ -1,1 +1,6 @@
-HOSTNAME=your_hostname
+# set up your own hostname
+HOSTNAME=
+# get the token from Netdata Cloud
+TOKEN=
+# use , between rooms if your want this node to add to multiple rooms
+ROOMS=
