--- a/netdata/docker-compose.yml
+++ b/netdata/docker-compose.yml
@@ -20,6 +20,10 @@ services:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
       - /etc/os-release:/host/etc/os-release:ro
+    environment:
+      - NETDATA_CLAIM_TOKEN=${TOKEN}
+      - NETDATA_CLAIM_URL=https://app.netdata.cloud
+      - NETDATA_CLAIM_ROOMS=${ROOMS}
 
 volumes:
   netdataconfig:
