Update plex config

--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -4,8 +4,18 @@ services:
     image: ghcr.io/linuxserver/plex
     container_name: plex
     #network_mode: host
+    ports:
+      - 1900:1900/udp
+      - 3005:3005
+      - 5353:5353/udp
+      - 8324:8324
+      - 32410:32410/udp
+      - 32412:32412/udp
+      - 32413:32413/udp
+      - 32414:32414/udp
+      - 32469:32469
     volumes:
-      - ${PLEX_CONFIG}/library:/config
+      - ${PLEX_CONFIG_PATH}/library:/config
       - ${PATH_TO_TV}:/tv
       - ${PATH_TO_MOVIE}:/movies
     restart: always
