Add more config

--- a/zfile/docker-compose.yml
+++ b/zfile/docker-compose.yml
@@ -9,4 +9,5 @@ services:
     volumes:
       - ~/zfile/db:/root/.zfile/db
       - ~/zfile/logs:/root/.zfile/logs
+      - /mnt/storage:/mnt/storage
 
