Update syncthing config

--- a/syncthing/.env
+++ b/syncthing/.env
@@ -1,4 +1,4 @@
-HOSTNAME=rica
+HOSTNAME=
 PATH_TO_SYNC=~/Syncthing
-YOUR_DOMAIN=sync.einverne.info
-YOUR_EMAIL=admin@einverne.info
+YOUR_DOMAIN=
+YOUR_EMAIL=
