--- a/zfile/docker-compose.yml
+++ b/zfile/docker-compose.yml
@@ -1,13 +1,21 @@
 version: "3"
+
 services:
   zfile:
     image: zhaojun1998/zfile:latest
     container_name: zfile
     restart: always
-    ports:
-      - 8080:8080
     volumes:
       - ~/zfile/db:/root/.zfile/db
       - ~/zfile/logs:/root/.zfile/logs
-      - /mnt/storage:/mnt/storage
+      - ~/zfile/storage:/mnt/storage
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.zfile.rule=Host(`${SITE:-zfile.docker.localhost}`)"
+      - "traefik.http.routers.zfile.service=zfile"
+      - "traefik.http.services.zfile.loadbalancer.server.port=8080"
 
+networks:
+  default:
+    external:
+      name: traefik
