Fix rTorrent and ruTorrent: expose XMLRPC port

--- a/rtorrent-rutorrent/docker-compose.yml
+++ b/rtorrent-rutorrent/docker-compose.yml
@@ -30,6 +30,9 @@ services:
       - target: ${RT_INC_PORT}
         published: ${RT_INC_PORT}
         protocol: tcp
+      - target: ${XMLRPC_PORT}
+        published: ${XMLRPC_PORT}
+        protocol: tcp
     env_file:
       - "rtorrent-rutorrent.env"
       - ".env"
