--- a/bitwarden_traefik/docker-compose.yml
+++ b/bitwarden_traefik/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - DOMAIN=${DOMAIN}
       - WEBSOCKET_ENABLED=true # Required to use websockets
       - SIGNUPS_ALLOWED=false   # set to false to disable signups
+      - ADMIN_TOKEN=${ADMIN_TOKEN}
       - SMTP_HOST=${SMTP_HOST}
       - SMTP_FROM=${SMTP_FROM}
       - SMTP_PORT=${SMTP_PORT}
