--- a/homer/.env
+++ b/homer/.env
@@ -1,3 +1,3 @@
-LOCAL_ASSETS_PATH=/home/einverne/Syncthing/A400Backup/homer
+LOCAL_ASSETS_PATH=~/Syncthing/A400Backup/homer/
 YOUR_DOMAIN=homer.einverne.info
 YOUR_EMAIL=admin@einverne.info
