--- a/aurora/docker-compose.yml
+++ b/aurora/docker-compose.yml
@@ -48,7 +48,5 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - ~/aurora/db-data:/var/lib/postgresql/data
 
-volumes:
-  db-data:
