Add smtp support to remark42

--- a/remark42/docker-compose.yml
+++ b/remark42/docker-compose.yml
@@ -28,7 +28,18 @@ services:
       - ADMIN_PASSWD=${ADMIN_PASSWD}
       - AUTH_GITHUB_CID=${AUTH_GITHUB_CID}
       - AUTH_GITHUB_CSEC=${AUTH_GITHUB_CSEC}
+      - SMTP_HOST=${SMTP_HOST}
+      - SMTP_PORT=${SMTP_PORT}
+      - SMTP_TLS=${SMTP_TLS}
+      - SMTP_USERNAME=${SMTP_USERNAME}
+      - SMTP_PASSWORD=${SMTP_PASSWORD}
       - VIRTUAL_HOST=${YOUR_DOMAIN}
+      - NOTIFY_ADMINS=email
+      - NOTIFY_EMAIL_FROM=${NOTIFY_EMAIL_FROM}
+      - ADMIN_SHARED_EMAIL=${ADMIN_SHARED_EMAIL}
+      - NOTIFY_USERS=email
+      - AUTH_EMAIL_ENABLE=true
+      - AUTH_EMAIL_FROM=${AUTH_EMAIL_FROM}
       - VIRTUAL_PORT=8080
       - LETSENCRYPT_HOST=${YOUR_DOMAIN}
       - LETSENCRYPT_EMAIL=${YOUR_EMAIL}
