--- a/alist/docker-compose.yml
+++ b/alist/docker-compose.yml
@@ -7,14 +7,9 @@ services:
     volumes:
       - '${ALIST_CONFIG_PATH}:/opt/alist/data'
     container_name: alist
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.alist.service=alist"
-      - "traefik.http.routers.alist.rule=Host(`${SITE:-localhost}`)"
-      - "traefik.http.services.alist.loadbalancer.server.port=5244"
 
 networks:
   default:
-    external:
-      name: traefik
+    external: true
+    name: nginx-proxy
 
