--- a/mastodon/docker-compose.yml
+++ b/mastodon/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
       - ~/mastodon/postgresql/data:/var/lib/postgresql/data
+    env_file: .env.production
     environment:
       - "POSTGRES_DB=mastodon"
       - "POSTGRES_USER=mastodon"
@@ -73,7 +74,7 @@ services:
       options:
         max-size: "10m"
   web:
-    image: tootsuite/mastodon:v3.5.3
+    image: tootsuite/mastodon:v4.0.2
     restart: always
     env_file: .env.production
     environment:
@@ -96,7 +97,7 @@ services:
       - db
       - redis
   streaming:
-    image: tootsuite/mastodon:v3.5.3
+    image: tootsuite/mastodon:v4.0.2
     env_file: .env.production
     restart: always
     command: node ./streaming
@@ -120,7 +121,7 @@ services:
       - redis
 
   sidekiq:
-    image: tootsuite/mastodon:v3.5.3
+    image: tootsuite/mastodon:v4.0.2
     environment:
       - "RAILS_ENV=production"
     env_file: .env.production
