--- a/memos/docker-compose.yml
+++ b/memos/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - '5230:5230'
     volumes:
-      - '${PATH_TO_MEMOES}:/var/opt/memos'
+      - '${PATH_TO_MEMOS}:/var/opt/memos'
 
 networks:
   default:
