--- a/huginn/docker-compose.yml
+++ b/huginn/docker-compose.yml
@@ -1,22 +1,15 @@
 version: "3"
 services:
   huginn:
-    image: huginn/huginn
+    image: ghcr.io/huginn/huginn
     container_name: huginn
     restart: always
+    ports:
+      - 3000:3000
     environment:
-      HUGINN_DATABASE_ADAPTER: postgresql
-      POSTGRES_PORT_5432_TCP_ADDR: ${POSTGRES_DB_ADDR}
-      POSTGRES_PORT_5432_TCP_PORT: 5432
-      HUGINN_DATABASE_NAME: ${POSTGRES_DATABASE_NAME}
-      HUGINN_DATABASE_USERNAME: ${POSTGRES_USERNAME}
-      HUGINN_DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
-      VIRTUAL_HOST: ${YOUR_DOMAIN}
-      VIRTUAL_PORT: 3000
-      LETSENCRYPT_HOST: ${YOUR_DOMAIN}
-      LETSENCRYPT_EMAIL: ${YOUR_EMAIL}
-
-networks:
-  default:
-    external:
-      name: nginx-proxy
+      HUGINN_DATABASE_ADAPTER: mysql2
+      MYSQL_PORT_3306_TCP_ADDR: ${MYSQL_PORT_3306_TCP_ADDR}
+      MYSQL_PORT_3306_TCP_PORT: 3306
+      MYSQL_DATABASE: huginn
+      DATABASE_USERNAME: ${DATABASE_USERNAME}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
