feat: update kuma config

--- a/uptime-kuma/docker-compose.yml
+++ b/uptime-kuma/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   uptime-kuma:
     container_name: uptime-kuma
-    image: louislam/uptime-kuma
+    image: louislam/uptime-kuma:${VERSION}
     restart: always
     volumes:
       - ${KUMA_DATA}:/app/data
