--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -1,39 +1,31 @@
 version: "3"
+
 services:
-  nextcloud_db:
-    image: mysql:5.7
+  db:
+    image: mariadb:10.6
     container_name: nextcloud_db
     restart: always
     volumes:
-      - db_data:/var/lib/mysql
-    ports:
-      - 3306:3306
+      - ${NEXTCLOUD_DB}:/var/lib/mysql
+    command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW --innodb-file-per-table=1 --skip-innodb-read-only-compressed
     environment:
-      MYSQL_ROOT_PASSWORD: rootpass
-      MYSQL_DATABASE: nextcloud
-      MYSQL_USER: nextcloud
-      MYSQL_PASSWORD: nextcloud
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
 
   nextcloud:
-    image: nextcloud:apache
+    image: nextcloud
     container_name: nextcloud_app
     restart: always
     depends_on:
-      - nextcloud_db
-    expose:
-      - 80
-      - 443
+      - db
+    ports:
+      - 8081:80
     volumes:
-      - nextcloud:/var/www/html
+      - ${NEXTCLOUD_DATA}:/var/www/html
     environment:
-      VIRTUAL_HOST: nc.einverne.info
-      VIRTUAL_PORT: 80
-      LETSENCRYPT_HOST: nc.einverne.info
-      LETSENCRYPT_EMAIL: admin@einverne.info
-volumes:
-  db_data:
-  nextcloud:
-networks:
-  default:
-    external:
-      name: nginx-proxy
+      - MYSQL_HOST=db
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
