feat(linx): update config

--- a/linx-server/config.conf
+++ b/linx-server/config.conf
@@ -1,8 +1,10 @@
 sitename = evLinx
 maxsize = 10240000
+cleanup-every-minutes = 5
+maxexpiry = 86400
+force-random-filename = true
 # allowhotlink = false
 # siteurl = "http://linx.einverne.info"
 # filespath = ""
 # metapath = ""
-# maxexpiry = 86400
 # authfile = "/path/to/authfile"
